# GraceToYouSermons

./: .gitignore  IMPORTANT.txt  LICENSE  README.md  classes.ipynb  dependencies.txt  formatted_sermons_scripture_template.html  mp3test.py  pyproject.toml  sermon_downloader.py
html_templates/: formatted_single_sermon_template.html
notebooks/: new_template.ipynb
src/gtysermons/: constants.py  file_helper.py  scripts.py  sermon_downloader.py
