[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gtysermons"
version = "0.1.0"
dependencies = [
    "requests",
    "selenium",
    "bs4",
    "loguru",
    "click"
]

[project.scripts]
gtydownload = "gtysermons.scripts:download"

[tool.setuptools]
package-dir = {"" = "src"}